ChangeLog

Upcoming version 7
[!!!]     This version drops support for TYPO3 12
[TASK]    Mark as compatible with TYPO3 13 and 14
[TASK]    Remove outdated Page TSconfig for TYPO3 12 compatibility
[TASK]    Replace `File::FILETYPE_IMAGE` with `FileType::IMAGE->value`
[TASK]    Use `RenderingContext` attributes for retrieving `ServerRequestInterface` in LinkViewHelper
[TASK]    Add `#[AsAllowedCallable]` attribute to plugin classes
[TASK]    Replace `$GLOBALS['TSFE']` usage with `request->getAttribute` calls
[TASK]    Remove deprecated `includeLLFile` call in BackendModuleController
[TASK]    Update Page TSconfig for ke_search table restrictions, deny index and filter option records
[TASK]    Replace `$GLOBALS['TSFE']->cObj`
[TASK]    Remove Typo3Version checks for TYPO3 < 13 compatibility
[TASK]    Add comments for TYPO3 14 migration and deprecations
[TASK]    Update FlexForm configuration handling for tt_content types
[TASK]    Fix size calculation to prevent index out-of-range error in function formatFileSize
[TASK]    Refactor `splitPdfInfo` method to improve type safety and readability
[TASK]    Simplify file indexability check in `IndexerBase`

Version 6.6.0, 6 November 2025
[!!!]     This version changes the database structure.
[FEATURE] Allow File Collections to be indexed. Thanks to Mike Street. https://github.com/tpwd/ke_search/pull/301
[FEATURE] Make inline script CSP-compatible. Tanks to Marco Ziesing. https://github.com/tpwd/ke_search/pull/305
[BUGFIX]  Fix undefined array key PHP warning in page indexer. Thanks to Moritz Ngo. https://github.com/tpwd/ke_search/pull/304
[BUGFIX]  Fix possible error on processing missing file. Thanks to Florian Schuhmann. https://github.com/tpwd/ke_search/pull/312
[TASK]    Refine in-word search logic with SphinxSearch condition
[TASK]    Replace ternary operators with null coalescing in SearchHelper. Thanks to medarob. https://github.com/tpwd/ke_search/issues/307