@@ -2,6 +2,7 @@ ChangeLog
 
 Upcoming version 7
 [!!!]     This version drops support for TYPO3 12
+[!!!]     Clear the caches after updating because there were updates in injected dependencies
 [TASK]    Mark as compatible with TYPO3 13 and 14
 [TASK]    Remove outdated Page TSconfig for TYPO3 12 compatibility
 [TASK]    Replace `File::FILETYPE_IMAGE` with `FileType::IMAGE->value`
@@ -17,6 +18,7 @@ Upcoming version 7
 [TASK]    Fix size calculation to prevent index out-of-range error in function formatFileSize
 [TASK]    Refactor `splitPdfInfo` method to improve type safety and readability
 [TASK]    Simplify file indexability check in `IndexerBase`
+[TASK]    Replace `send` method of MailMessage with `MailerInterface->send`
 
 Version 6.6.0, 6 November 2025
 [!!!]     This version changes the database structure.
